<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="action_settings">Settings</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_detail_contact">DetailContacts</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="message">Message</string>
    <string name="envoyer">Send</string>
    <string name="sms">Send</string>
    <string name="ColorBlue">Blue</string>
    <string name="ColorRed">Red</string>
    <string name="ColorGreen">Green</string>
    <string name="appel">Call</string>

</resources>
