<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailContacts" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">


        <!-- Importation de notre Toolbar -->
        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@id/toolbar"
            android:textAppearance="?android:attr/textAppearanceSmall" >
            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextStreet"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-1dp"
            android:ems="10"
            android:inputType="phone|text"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignLeft="@+id/editTextStreet"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="-2dp"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignRight="@+id/editTextName"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/editTextPhone"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="6dp"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="8dp"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextCity"
            android:layout_alignBottom="@+id/editTextCity"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-1dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@+id/editTextEmail"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <ImageButton
            android:id="@+id/saveContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentBottom="true"
            android:minWidth="60dp"
            android:minHeight="60dp"
            android:layout_centerHorizontal="true"
            android:onClick="run"
            android:text="@string/save"
            android:theme="@style/ToolbarTheme"
            android:src="@drawable/ic_save_black_24dp"
            android:layout_margin="16dp" />

        <ImageButton
            android:id="@+id/sendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:minWidth="60dp"
            android:minHeight="60dp"
            android:onClick="sms"
            android:src="@drawable/ic_sms_black_24dp"
            android:layout_margin="16dp" />

        <ImageButton android:id="@+id/appel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minWidth="60dp"
            android:minHeight="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="appel"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_margin="16dp" />

    </RelativeLayout>
</ScrollView>